--- a/package.json
+++ b/package.json
@@ -3,108 +3,108 @@
   "license": "UNLICENSED",
   "type": "module",
   "dependencies": {
-    "@hilla/form": "2.5.5",
-    "@hilla/frontend": "2.5.5",
-    "@hilla/generator-typescript-cli": "2.5.5",
-    "@hilla/generator-typescript-core": "2.5.5",
-    "@hilla/generator-typescript-plugin-backbone": "2.5.5",
-    "@hilla/generator-typescript-plugin-barrel": "2.5.5",
-    "@hilla/generator-typescript-plugin-client": "2.5.5",
-    "@hilla/generator-typescript-plugin-model": "2.5.5",
-    "@hilla/generator-typescript-plugin-push": "2.5.5",
-    "@hilla/generator-typescript-plugin-subtypes": "2.5.5",
-    "@hilla/generator-typescript-utils": "2.5.5",
-    "@hilla/react-auth": "2.5.5",
-    "@hilla/react-components": "2.3.0",
-    "@hilla/react-crud": "2.5.5",
-    "@hilla/react-form": "2.5.5",
     "@polymer/polymer": "3.5.1",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
     "@vaadin-component-factory/vcf-nav": "1.1.0",
-    "@vaadin/accordion": "24.3.2",
-    "@vaadin/app-layout": "24.3.2",
-    "@vaadin/avatar": "24.3.2",
-    "@vaadin/avatar-group": "24.3.2",
-    "@vaadin/board": "24.3.2",
-    "@vaadin/bundles": "24.3.2",
-    "@vaadin/button": "24.3.2",
-    "@vaadin/charts": "24.3.2",
-    "@vaadin/checkbox": "24.3.2",
-    "@vaadin/checkbox-group": "24.3.2",
-    "@vaadin/combo-box": "24.3.2",
+    "@vaadin/accordion": "24.4.0-alpha6",
+    "@vaadin/app-layout": "24.4.0-alpha6",
+    "@vaadin/avatar": "24.4.0-alpha6",
+    "@vaadin/avatar-group": "24.4.0-alpha6",
+    "@vaadin/board": "24.4.0-alpha6",
+    "@vaadin/bundles": "24.4.0-alpha6",
+    "@vaadin/button": "24.4.0-alpha6",
+    "@vaadin/charts": "24.4.0-alpha6",
+    "@vaadin/checkbox": "24.4.0-alpha6",
+    "@vaadin/checkbox-group": "24.4.0-alpha6",
+    "@vaadin/combo-box": "24.4.0-alpha6",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/confirm-dialog": "24.3.2",
-    "@vaadin/context-menu": "24.3.2",
-    "@vaadin/cookie-consent": "24.3.2",
-    "@vaadin/crud": "24.3.2",
-    "@vaadin/custom-field": "24.3.2",
-    "@vaadin/date-picker": "24.3.2",
-    "@vaadin/date-time-picker": "24.3.2",
-    "@vaadin/details": "24.3.2",
-    "@vaadin/dialog": "24.3.2",
-    "@vaadin/email-field": "24.3.2",
-    "@vaadin/field-highlighter": "24.3.2",
-    "@vaadin/form-layout": "24.3.2",
-    "@vaadin/grid": "24.3.2",
-    "@vaadin/grid-pro": "24.3.2",
-    "@vaadin/horizontal-layout": "24.3.2",
-    "@vaadin/icon": "24.3.2",
-    "@vaadin/icons": "24.3.2",
-    "@vaadin/integer-field": "24.3.2",
-    "@vaadin/item": "24.3.2",
-    "@vaadin/list-box": "24.3.2",
-    "@vaadin/login": "24.3.2",
-    "@vaadin/map": "24.3.2",
-    "@vaadin/menu-bar": "24.3.2",
-    "@vaadin/message-input": "24.3.2",
-    "@vaadin/message-list": "24.3.2",
-    "@vaadin/multi-select-combo-box": "24.3.2",
-    "@vaadin/notification": "24.3.2",
-    "@vaadin/number-field": "24.3.2",
-    "@vaadin/password-field": "24.3.2",
-    "@vaadin/polymer-legacy-adapter": "24.3.2",
-    "@vaadin/progress-bar": "24.3.2",
-    "@vaadin/radio-group": "24.3.2",
-    "@vaadin/rich-text-editor": "24.3.2",
-    "@vaadin/scroller": "24.3.2",
-    "@vaadin/select": "24.3.2",
-    "@vaadin/side-nav": "24.3.2",
-    "@vaadin/split-layout": "24.3.2",
-    "@vaadin/tabs": "24.3.2",
-    "@vaadin/tabsheet": "24.3.2",
-    "@vaadin/text-area": "24.3.2",
-    "@vaadin/text-field": "24.3.2",
-    "@vaadin/time-picker": "24.3.2",
-    "@vaadin/tooltip": "24.3.2",
-    "@vaadin/upload": "24.3.2",
-    "@vaadin/vertical-layout": "24.3.2",
-    "@vaadin/virtual-list": "24.3.2",
+    "@vaadin/confirm-dialog": "24.4.0-alpha6",
+    "@vaadin/context-menu": "24.4.0-alpha6",
+    "@vaadin/cookie-consent": "24.4.0-alpha6",
+    "@vaadin/crud": "24.4.0-alpha6",
+    "@vaadin/custom-field": "24.4.0-alpha6",
+    "@vaadin/date-picker": "24.4.0-alpha6",
+    "@vaadin/date-time-picker": "24.4.0-alpha6",
+    "@vaadin/details": "24.4.0-alpha6",
+    "@vaadin/dialog": "24.4.0-alpha6",
+    "@vaadin/email-field": "24.4.0-alpha6",
+    "@vaadin/field-highlighter": "24.4.0-alpha6",
+    "@vaadin/form-layout": "24.4.0-alpha6",
+    "@vaadin/grid": "24.4.0-alpha6",
+    "@vaadin/grid-pro": "24.4.0-alpha6",
+    "@vaadin/hilla-core": "24.4.0-alpha2",
+    "@vaadin/hilla-generator-cli": "24.4.0-alpha2",
+    "@vaadin/hilla-generator-core": "24.4.0-alpha2",
+    "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha2",
+    "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha2",
+    "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha2",
+    "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha2",
+    "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha2",
+    "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha2",
+    "@vaadin/hilla-generator-utils": "24.4.0-alpha2",
+    "@vaadin/hilla-lit-form": "24.4.0-alpha2",
+    "@vaadin/hilla-react-auth": "24.4.0-alpha2",
+    "@vaadin/hilla-react-crud": "24.4.0-alpha2",
+    "@vaadin/hilla-react-form": "24.4.0-alpha2",
+    "@vaadin/horizontal-layout": "24.4.0-alpha6",
+    "@vaadin/icon": "24.4.0-alpha6",
+    "@vaadin/icons": "24.4.0-alpha6",
+    "@vaadin/integer-field": "24.4.0-alpha6",
+    "@vaadin/item": "24.4.0-alpha6",
+    "@vaadin/list-box": "24.4.0-alpha6",
+    "@vaadin/login": "24.4.0-alpha6",
+    "@vaadin/map": "24.4.0-alpha6",
+    "@vaadin/menu-bar": "24.4.0-alpha6",
+    "@vaadin/message-input": "24.4.0-alpha6",
+    "@vaadin/message-list": "24.4.0-alpha6",
+    "@vaadin/multi-select-combo-box": "24.4.0-alpha6",
+    "@vaadin/notification": "24.4.0-alpha6",
+    "@vaadin/number-field": "24.4.0-alpha6",
+    "@vaadin/password-field": "24.4.0-alpha6",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha6",
+    "@vaadin/progress-bar": "24.4.0-alpha6",
+    "@vaadin/radio-group": "24.4.0-alpha6",
+    "@vaadin/react-components": "24.4.0-alpha6",
+    "@vaadin/rich-text-editor": "24.4.0-alpha6",
+    "@vaadin/scroller": "24.4.0-alpha6",
+    "@vaadin/select": "24.4.0-alpha6",
+    "@vaadin/side-nav": "24.4.0-alpha6",
+    "@vaadin/split-layout": "24.4.0-alpha6",
+    "@vaadin/tabs": "24.4.0-alpha6",
+    "@vaadin/tabsheet": "24.4.0-alpha6",
+    "@vaadin/text-area": "24.4.0-alpha6",
+    "@vaadin/text-field": "24.4.0-alpha6",
+    "@vaadin/time-picker": "24.4.0-alpha6",
+    "@vaadin/tooltip": "24.4.0-alpha6",
+    "@vaadin/upload": "24.4.0-alpha6",
+    "@vaadin/vertical-layout": "24.4.0-alpha6",
+    "@vaadin/virtual-list": "24.4.0-alpha6",
     "classnames": "^2.3.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "3.1.0",
+    "lit": "3.1.1",
     "proj4": "2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.18.0"
+    "react-router-dom": "6.21.2"
   },
   "devDependencies": {
     "@lit-labs/react": "^1.1.0",
-    "@rollup/plugin-replace": "5.0.4",
-    "@rollup/pluginutils": "5.0.5",
+    "@rollup/plugin-replace": "5.0.5",
+    "@rollup/pluginutils": "5.1.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "4.2.0",
+    "@vitejs/plugin-react": "4.2.1",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "async": "3.2.4",
-    "glob": "10.3.3",
+    "async": "3.2.5",
+    "glob": "10.3.10",
     "rollup-plugin-brotli": "3.1.0",
-    "rollup-plugin-visualizer": "5.9.2",
+    "rollup-plugin-visualizer": "5.12.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.3.3",
-    "vite": "5.0.6",
+    "vite": "5.0.11",
     "vite-plugin-checker": "0.6.2",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
@@ -120,22 +120,11 @@
     "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
     "lit": "$lit",
     "@polymer/polymer": "$@polymer/polymer",
-    "@hilla/react-components": "$@hilla/react-components",
     "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
     "classnames": "$classnames",
     "react": "$react",
     "react-dom": "$react-dom",
     "react-router-dom": "$react-router-dom",
-    "@hilla/generator-typescript-plugin-model": "$@hilla/generator-typescript-plugin-model",
-    "@hilla/generator-typescript-plugin-barrel": "$@hilla/generator-typescript-plugin-barrel",
-    "@hilla/generator-typescript-plugin-push": "$@hilla/generator-typescript-plugin-push",
-    "@hilla/generator-typescript-core": "$@hilla/generator-typescript-core",
-    "@hilla/generator-typescript-plugin-client": "$@hilla/generator-typescript-plugin-client",
-    "@hilla/generator-typescript-utils": "$@hilla/generator-typescript-utils",
-    "@hilla/frontend": "$@hilla/frontend",
-    "@hilla/form": "$@hilla/form",
-    "@hilla/generator-typescript-plugin-backbone": "$@hilla/generator-typescript-plugin-backbone",
-    "@hilla/generator-typescript-cli": "$@hilla/generator-typescript-cli",
     "@vaadin/board": "$@vaadin/board",
     "@vaadin/charts": "$@vaadin/charts",
     "@vaadin/cookie-consent": "$@vaadin/cookie-consent",
@@ -153,13 +142,11 @@
     "@vaadin/integer-field": "$@vaadin/integer-field",
     "@vaadin/select": "$@vaadin/select",
     "@vaadin/confirm-dialog": "$@vaadin/confirm-dialog",
-    "@hilla/generator-typescript-plugin-subtypes": "$@hilla/generator-typescript-plugin-subtypes",
     "@vaadin/grid": "$@vaadin/grid",
     "@vaadin/tabsheet": "$@vaadin/tabsheet",
     "@vaadin/text-area": "$@vaadin/text-area",
     "@vaadin/context-menu": "$@vaadin/context-menu",
     "@vaadin/password-field": "$@vaadin/password-field",
-    "@hilla/react-auth": "$@hilla/react-auth",
     "@vaadin/date-time-picker": "$@vaadin/date-time-picker",
     "@vaadin/progress-bar": "$@vaadin/progress-bar",
     "@vaadin/multi-select-combo-box": "$@vaadin/multi-select-combo-box",
@@ -174,12 +161,10 @@
     "@vaadin/button": "$@vaadin/button",
     "@vaadin/accordion": "$@vaadin/accordion",
     "@vaadin/avatar": "$@vaadin/avatar",
-    "@hilla/react-crud": "$@hilla/react-crud",
     "@vaadin/radio-group": "$@vaadin/radio-group",
     "@vaadin/horizontal-layout": "$@vaadin/horizontal-layout",
     "date-fns": "$date-fns",
     "@vaadin/virtual-list": "$@vaadin/virtual-list",
-    "@hilla/react-form": "$@hilla/react-form",
     "@vaadin/combo-box": "$@vaadin/combo-box",
     "@vaadin/menu-bar": "$@vaadin/menu-bar",
     "@vaadin/message-list": "$@vaadin/message-list",
@@ -195,112 +180,127 @@
     "@vaadin/notification": "$@vaadin/notification",
     "@vaadin/scroller": "$@vaadin/scroller",
     "@vaadin/message-input": "$@vaadin/message-input",
-    "@vaadin/email-field": "$@vaadin/email-field"
+    "@vaadin/email-field": "$@vaadin/email-field",
+    "@vaadin/react-components": "$@vaadin/react-components",
+    "@vaadin/hilla-generator-plugin-model": "$@vaadin/hilla-generator-plugin-model",
+    "@vaadin/hilla-react-crud": "$@vaadin/hilla-react-crud",
+    "@vaadin/hilla-generator-plugin-subtypes": "$@vaadin/hilla-generator-plugin-subtypes",
+    "@vaadin/hilla-generator-utils": "$@vaadin/hilla-generator-utils",
+    "@vaadin/hilla-generator-plugin-barrel": "$@vaadin/hilla-generator-plugin-barrel",
+    "@vaadin/hilla-react-form": "$@vaadin/hilla-react-form",
+    "@vaadin/hilla-generator-core": "$@vaadin/hilla-generator-core",
+    "@vaadin/hilla-core": "$@vaadin/hilla-core",
+    "@vaadin/hilla-generator-plugin-push": "$@vaadin/hilla-generator-plugin-push",
+    "@vaadin/hilla-generator-plugin-client": "$@vaadin/hilla-generator-plugin-client",
+    "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
+    "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
+    "@vaadin/hilla-generator-cli": "$@vaadin/hilla-generator-cli",
+    "@vaadin/hilla-generator-plugin-backbone": "$@vaadin/hilla-generator-plugin-backbone"
   },
   "vaadin": {
     "dependencies": {
-      "@hilla/form": "2.5.5",
-      "@hilla/frontend": "2.5.5",
-      "@hilla/generator-typescript-cli": "2.5.5",
-      "@hilla/generator-typescript-core": "2.5.5",
-      "@hilla/generator-typescript-plugin-backbone": "2.5.5",
-      "@hilla/generator-typescript-plugin-barrel": "2.5.5",
-      "@hilla/generator-typescript-plugin-client": "2.5.5",
-      "@hilla/generator-typescript-plugin-model": "2.5.5",
-      "@hilla/generator-typescript-plugin-push": "2.5.5",
-      "@hilla/generator-typescript-plugin-subtypes": "2.5.5",
-      "@hilla/generator-typescript-utils": "2.5.5",
-      "@hilla/react-auth": "2.5.5",
-      "@hilla/react-components": "2.3.0",
-      "@hilla/react-crud": "2.5.5",
-      "@hilla/react-form": "2.5.5",
       "@polymer/polymer": "3.5.1",
-      "@types/react": "18.2.37",
-      "@types/react-dom": "18.2.15",
-      "@vaadin/accordion": "24.3.2",
-      "@vaadin/app-layout": "24.3.2",
-      "@vaadin/avatar": "24.3.2",
-      "@vaadin/avatar-group": "24.3.2",
-      "@vaadin/board": "24.3.2",
-      "@vaadin/bundles": "24.3.2",
-      "@vaadin/button": "24.3.2",
-      "@vaadin/charts": "24.3.2",
-      "@vaadin/checkbox": "24.3.2",
-      "@vaadin/checkbox-group": "24.3.2",
-      "@vaadin/combo-box": "24.3.2",
+      "@types/react": "18.2.48",
+      "@types/react-dom": "18.2.18",
+      "@vaadin/accordion": "24.4.0-alpha6",
+      "@vaadin/app-layout": "24.4.0-alpha6",
+      "@vaadin/avatar": "24.4.0-alpha6",
+      "@vaadin/avatar-group": "24.4.0-alpha6",
+      "@vaadin/board": "24.4.0-alpha6",
+      "@vaadin/bundles": "24.4.0-alpha6",
+      "@vaadin/button": "24.4.0-alpha6",
+      "@vaadin/charts": "24.4.0-alpha6",
+      "@vaadin/checkbox": "24.4.0-alpha6",
+      "@vaadin/checkbox-group": "24.4.0-alpha6",
+      "@vaadin/combo-box": "24.4.0-alpha6",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/confirm-dialog": "24.3.2",
-      "@vaadin/context-menu": "24.3.2",
-      "@vaadin/cookie-consent": "24.3.2",
-      "@vaadin/crud": "24.3.2",
-      "@vaadin/custom-field": "24.3.2",
-      "@vaadin/date-picker": "24.3.2",
-      "@vaadin/date-time-picker": "24.3.2",
-      "@vaadin/details": "24.3.2",
-      "@vaadin/dialog": "24.3.2",
-      "@vaadin/email-field": "24.3.2",
-      "@vaadin/field-highlighter": "24.3.2",
-      "@vaadin/form-layout": "24.3.2",
-      "@vaadin/grid": "24.3.2",
-      "@vaadin/grid-pro": "24.3.2",
-      "@vaadin/horizontal-layout": "24.3.2",
-      "@vaadin/icon": "24.3.2",
-      "@vaadin/icons": "24.3.2",
-      "@vaadin/integer-field": "24.3.2",
-      "@vaadin/item": "24.3.2",
-      "@vaadin/list-box": "24.3.2",
-      "@vaadin/login": "24.3.2",
-      "@vaadin/map": "24.3.2",
-      "@vaadin/menu-bar": "24.3.2",
-      "@vaadin/message-input": "24.3.2",
-      "@vaadin/message-list": "24.3.2",
-      "@vaadin/multi-select-combo-box": "24.3.2",
-      "@vaadin/notification": "24.3.2",
-      "@vaadin/number-field": "24.3.2",
-      "@vaadin/password-field": "24.3.2",
-      "@vaadin/polymer-legacy-adapter": "24.3.2",
-      "@vaadin/progress-bar": "24.3.2",
-      "@vaadin/radio-group": "24.3.2",
-      "@vaadin/rich-text-editor": "24.3.2",
-      "@vaadin/scroller": "24.3.2",
-      "@vaadin/select": "24.3.2",
-      "@vaadin/side-nav": "24.3.2",
-      "@vaadin/split-layout": "24.3.2",
-      "@vaadin/tabs": "24.3.2",
-      "@vaadin/tabsheet": "24.3.2",
-      "@vaadin/text-area": "24.3.2",
-      "@vaadin/text-field": "24.3.2",
-      "@vaadin/time-picker": "24.3.2",
-      "@vaadin/tooltip": "24.3.2",
-      "@vaadin/upload": "24.3.2",
-      "@vaadin/vertical-layout": "24.3.2",
-      "@vaadin/virtual-list": "24.3.2",
+      "@vaadin/confirm-dialog": "24.4.0-alpha6",
+      "@vaadin/context-menu": "24.4.0-alpha6",
+      "@vaadin/cookie-consent": "24.4.0-alpha6",
+      "@vaadin/crud": "24.4.0-alpha6",
+      "@vaadin/custom-field": "24.4.0-alpha6",
+      "@vaadin/date-picker": "24.4.0-alpha6",
+      "@vaadin/date-time-picker": "24.4.0-alpha6",
+      "@vaadin/details": "24.4.0-alpha6",
+      "@vaadin/dialog": "24.4.0-alpha6",
+      "@vaadin/email-field": "24.4.0-alpha6",
+      "@vaadin/field-highlighter": "24.4.0-alpha6",
+      "@vaadin/form-layout": "24.4.0-alpha6",
+      "@vaadin/grid": "24.4.0-alpha6",
+      "@vaadin/grid-pro": "24.4.0-alpha6",
+      "@vaadin/hilla-core": "24.4.0-alpha2",
+      "@vaadin/hilla-generator-cli": "24.4.0-alpha2",
+      "@vaadin/hilla-generator-core": "24.4.0-alpha2",
+      "@vaadin/hilla-generator-plugin-backbone": "24.4.0-alpha2",
+      "@vaadin/hilla-generator-plugin-barrel": "24.4.0-alpha2",
+      "@vaadin/hilla-generator-plugin-client": "24.4.0-alpha2",
+      "@vaadin/hilla-generator-plugin-model": "24.4.0-alpha2",
+      "@vaadin/hilla-generator-plugin-push": "24.4.0-alpha2",
+      "@vaadin/hilla-generator-plugin-subtypes": "24.4.0-alpha2",
+      "@vaadin/hilla-generator-utils": "24.4.0-alpha2",
+      "@vaadin/hilla-lit-form": "24.4.0-alpha2",
+      "@vaadin/hilla-react-auth": "24.4.0-alpha2",
+      "@vaadin/hilla-react-crud": "24.4.0-alpha2",
+      "@vaadin/hilla-react-form": "24.4.0-alpha2",
+      "@vaadin/horizontal-layout": "24.4.0-alpha6",
+      "@vaadin/icon": "24.4.0-alpha6",
+      "@vaadin/icons": "24.4.0-alpha6",
+      "@vaadin/integer-field": "24.4.0-alpha6",
+      "@vaadin/item": "24.4.0-alpha6",
+      "@vaadin/list-box": "24.4.0-alpha6",
+      "@vaadin/login": "24.4.0-alpha6",
+      "@vaadin/map": "24.4.0-alpha6",
+      "@vaadin/menu-bar": "24.4.0-alpha6",
+      "@vaadin/message-input": "24.4.0-alpha6",
+      "@vaadin/message-list": "24.4.0-alpha6",
+      "@vaadin/multi-select-combo-box": "24.4.0-alpha6",
+      "@vaadin/notification": "24.4.0-alpha6",
+      "@vaadin/number-field": "24.4.0-alpha6",
+      "@vaadin/password-field": "24.4.0-alpha6",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha6",
+      "@vaadin/progress-bar": "24.4.0-alpha6",
+      "@vaadin/radio-group": "24.4.0-alpha6",
+      "@vaadin/react-components": "24.4.0-alpha6",
+      "@vaadin/rich-text-editor": "24.4.0-alpha6",
+      "@vaadin/scroller": "24.4.0-alpha6",
+      "@vaadin/select": "24.4.0-alpha6",
+      "@vaadin/side-nav": "24.4.0-alpha6",
+      "@vaadin/split-layout": "24.4.0-alpha6",
+      "@vaadin/tabs": "24.4.0-alpha6",
+      "@vaadin/tabsheet": "24.4.0-alpha6",
+      "@vaadin/text-area": "24.4.0-alpha6",
+      "@vaadin/text-field": "24.4.0-alpha6",
+      "@vaadin/time-picker": "24.4.0-alpha6",
+      "@vaadin/tooltip": "24.4.0-alpha6",
+      "@vaadin/upload": "24.4.0-alpha6",
+      "@vaadin/vertical-layout": "24.4.0-alpha6",
+      "@vaadin/virtual-list": "24.4.0-alpha6",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "3.1.0",
+      "lit": "3.1.1",
       "proj4": "2.9.2",
       "react": "18.2.0",
       "react-dom": "18.2.0",
-      "react-router-dom": "6.18.0"
+      "react-router-dom": "6.21.2"
     },
     "devDependencies": {
-      "@rollup/plugin-replace": "5.0.4",
-      "@rollup/pluginutils": "5.0.5",
-      "@vitejs/plugin-react": "4.2.0",
+      "@rollup/plugin-replace": "5.0.5",
+      "@rollup/pluginutils": "5.1.0",
+      "@vitejs/plugin-react": "4.2.1",
       "@vitejs/plugin-react-swc": "3.5.0",
-      "async": "3.2.4",
-      "glob": "10.3.3",
+      "async": "3.2.5",
+      "glob": "10.3.10",
       "rollup-plugin-brotli": "3.1.0",
-      "rollup-plugin-visualizer": "5.9.2",
+      "rollup-plugin-visualizer": "5.12.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.3.3",
-      "vite": "5.0.6",
+      "vite": "5.0.11",
       "vite-plugin-checker": "0.6.2",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "31f12cc8dbd97000e67a8f75a731d03445badd4cb656fe5cb916c6cc969fbfad"
+    "hash": "528582264dbdf92b3c0c1bc9359186a61feb9224623e3d3f9568c82c7ca46baa"
   }
 }
