--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>24.3.2</vaadin.version>
-        <hilla.version>2.5.5</hilla.version>
+        <vaadin.version>24.4-SNAPSHOT</vaadin.version>
+        <hilla.version>24.4-SNAPSHOT</hilla.version>
     </properties>
 
     <parent>
@@ -58,7 +58,7 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>dev.hilla</groupId>
+                <groupId>com.vaadin.hilla</groupId>
                 <artifactId>hilla-bom</artifactId>
                 <version>${hilla.version}</version>
                 <type>pom</type>
@@ -69,11 +69,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>dev.hilla</groupId>
+            <groupId>com.vaadin.hilla</groupId>
             <artifactId>hilla-react</artifactId>
         </dependency>
         <dependency>
-            <groupId>dev.hilla</groupId>
+            <groupId>com.vaadin.hilla</groupId>
             <artifactId>hilla-react-spring-boot-starter</artifactId>
          </dependency>
         <dependency>
@@ -111,7 +111,7 @@
             </plugin>
 
             <plugin>
-                <groupId>dev.hilla</groupId>
+                <groupId>com.vaadin.hilla</groupId>
                 <artifactId>hilla-maven-plugin</artifactId>
                 <version>${hilla.version}</version>
                 <executions>
@@ -145,7 +145,7 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>dev.hilla</groupId>
+                        <groupId>com.vaadin.hilla</groupId>
                         <artifactId>hilla-maven-plugin</artifactId>
                         <version>${hilla.version}</version>
                         <executions>
