--- a/package.json
+++ b/package.json
@@ -7,32 +7,35 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@vaadin-component-factory/vcf-nav": "1.1.0",
-    "@vaadin/accordion": "24.4.0-alpha6",
-    "@vaadin/app-layout": "24.4.0-alpha6",
-    "@vaadin/avatar": "24.4.0-alpha6",
-    "@vaadin/avatar-group": "24.4.0-alpha6",
-    "@vaadin/board": "24.4.0-alpha6",
-    "@vaadin/bundles": "24.4.0-alpha6",
-    "@vaadin/button": "24.4.0-alpha6",
-    "@vaadin/charts": "24.4.0-alpha6",
-    "@vaadin/checkbox": "24.4.0-alpha6",
-    "@vaadin/checkbox-group": "24.4.0-alpha6",
-    "@vaadin/combo-box": "24.4.0-alpha6",
+    "@vaadin/a11y-base": "24.4.0-alpha8",
+    "@vaadin/accordion": "24.4.0-alpha8",
+    "@vaadin/app-layout": "24.4.0-alpha8",
+    "@vaadin/avatar": "24.4.0-alpha8",
+    "@vaadin/avatar-group": "24.4.0-alpha8",
+    "@vaadin/board": "24.4.0-alpha8",
+    "@vaadin/bundles": "24.4.0-alpha8",
+    "@vaadin/button": "24.4.0-alpha8",
+    "@vaadin/charts": "24.4.0-alpha8",
+    "@vaadin/checkbox": "24.4.0-alpha8",
+    "@vaadin/checkbox-group": "24.4.0-alpha8",
+    "@vaadin/combo-box": "24.4.0-alpha8",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/confirm-dialog": "24.4.0-alpha6",
-    "@vaadin/context-menu": "24.4.0-alpha6",
-    "@vaadin/cookie-consent": "24.4.0-alpha6",
-    "@vaadin/crud": "24.4.0-alpha6",
-    "@vaadin/custom-field": "24.4.0-alpha6",
-    "@vaadin/date-picker": "24.4.0-alpha6",
-    "@vaadin/date-time-picker": "24.4.0-alpha6",
-    "@vaadin/details": "24.4.0-alpha6",
-    "@vaadin/dialog": "24.4.0-alpha6",
-    "@vaadin/email-field": "24.4.0-alpha6",
-    "@vaadin/field-highlighter": "24.4.0-alpha6",
-    "@vaadin/form-layout": "24.4.0-alpha6",
-    "@vaadin/grid": "24.4.0-alpha6",
-    "@vaadin/grid-pro": "24.4.0-alpha6",
+    "@vaadin/component-base": "24.4.0-alpha8",
+    "@vaadin/confirm-dialog": "24.4.0-alpha8",
+    "@vaadin/context-menu": "24.4.0-alpha8",
+    "@vaadin/cookie-consent": "24.4.0-alpha8",
+    "@vaadin/crud": "24.4.0-alpha8",
+    "@vaadin/custom-field": "24.4.0-alpha8",
+    "@vaadin/date-picker": "24.4.0-alpha8",
+    "@vaadin/date-time-picker": "24.4.0-alpha8",
+    "@vaadin/details": "24.4.0-alpha8",
+    "@vaadin/dialog": "24.4.0-alpha8",
+    "@vaadin/email-field": "24.4.0-alpha8",
+    "@vaadin/field-base": "24.4.0-alpha8",
+    "@vaadin/field-highlighter": "24.4.0-alpha8",
+    "@vaadin/form-layout": "24.4.0-alpha8",
+    "@vaadin/grid": "24.4.0-alpha8",
+    "@vaadin/grid-pro": "24.4.0-alpha8",
     "@vaadin/hilla-core": "24.4.0-alpha2",
     "@vaadin/hilla-generator-cli": "24.4.0-alpha2",
     "@vaadin/hilla-generator-core": "24.4.0-alpha2",
@@ -47,39 +50,48 @@
     "@vaadin/hilla-react-auth": "24.4.0-alpha2",
     "@vaadin/hilla-react-crud": "24.4.0-alpha2",
     "@vaadin/hilla-react-form": "24.4.0-alpha2",
-    "@vaadin/horizontal-layout": "24.4.0-alpha6",
-    "@vaadin/icon": "24.4.0-alpha6",
-    "@vaadin/icons": "24.4.0-alpha6",
-    "@vaadin/integer-field": "24.4.0-alpha6",
-    "@vaadin/item": "24.4.0-alpha6",
-    "@vaadin/list-box": "24.4.0-alpha6",
-    "@vaadin/login": "24.4.0-alpha6",
-    "@vaadin/map": "24.4.0-alpha6",
-    "@vaadin/menu-bar": "24.4.0-alpha6",
-    "@vaadin/message-input": "24.4.0-alpha6",
-    "@vaadin/message-list": "24.4.0-alpha6",
-    "@vaadin/multi-select-combo-box": "24.4.0-alpha6",
-    "@vaadin/notification": "24.4.0-alpha6",
-    "@vaadin/number-field": "24.4.0-alpha6",
-    "@vaadin/password-field": "24.4.0-alpha6",
-    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha6",
-    "@vaadin/progress-bar": "24.4.0-alpha6",
-    "@vaadin/radio-group": "24.4.0-alpha6",
-    "@vaadin/react-components": "24.4.0-alpha6",
-    "@vaadin/rich-text-editor": "24.4.0-alpha6",
-    "@vaadin/scroller": "24.4.0-alpha6",
-    "@vaadin/select": "24.4.0-alpha6",
-    "@vaadin/side-nav": "24.4.0-alpha6",
-    "@vaadin/split-layout": "24.4.0-alpha6",
-    "@vaadin/tabs": "24.4.0-alpha6",
-    "@vaadin/tabsheet": "24.4.0-alpha6",
-    "@vaadin/text-area": "24.4.0-alpha6",
-    "@vaadin/text-field": "24.4.0-alpha6",
-    "@vaadin/time-picker": "24.4.0-alpha6",
-    "@vaadin/tooltip": "24.4.0-alpha6",
-    "@vaadin/upload": "24.4.0-alpha6",
-    "@vaadin/vertical-layout": "24.4.0-alpha6",
-    "@vaadin/virtual-list": "24.4.0-alpha6",
+    "@vaadin/horizontal-layout": "24.4.0-alpha8",
+    "@vaadin/icon": "24.4.0-alpha8",
+    "@vaadin/icons": "24.4.0-alpha8",
+    "@vaadin/input-container": "24.4.0-alpha8",
+    "@vaadin/integer-field": "24.4.0-alpha8",
+    "@vaadin/item": "24.4.0-alpha8",
+    "@vaadin/list-box": "24.4.0-alpha8",
+    "@vaadin/lit-renderer": "24.4.0-alpha8",
+    "@vaadin/login": "24.4.0-alpha8",
+    "@vaadin/map": "24.4.0-alpha8",
+    "@vaadin/menu-bar": "24.4.0-alpha8",
+    "@vaadin/message-input": "24.4.0-alpha8",
+    "@vaadin/message-list": "24.4.0-alpha8",
+    "@vaadin/multi-select-combo-box": "24.4.0-alpha8",
+    "@vaadin/notification": "24.4.0-alpha8",
+    "@vaadin/number-field": "24.4.0-alpha8",
+    "@vaadin/overlay": "24.4.0-alpha8",
+    "@vaadin/password-field": "24.4.0-alpha8",
+    "@vaadin/polymer-legacy-adapter": "24.4.0-alpha8",
+    "@vaadin/progress-bar": "24.4.0-alpha8",
+    "@vaadin/radio-group": "24.4.0-alpha8",
+    "@vaadin/react-components": "24.4.0-alpha5",
+    "@vaadin/rich-text-editor": "24.4.0-alpha8",
+    "@vaadin/router": "1.7.5",
+    "@vaadin/scroller": "24.4.0-alpha8",
+    "@vaadin/select": "24.4.0-alpha8",
+    "@vaadin/side-nav": "24.4.0-alpha8",
+    "@vaadin/split-layout": "24.4.0-alpha8",
+    "@vaadin/tabs": "24.4.0-alpha8",
+    "@vaadin/tabsheet": "24.4.0-alpha8",
+    "@vaadin/text-area": "24.4.0-alpha8",
+    "@vaadin/text-field": "24.4.0-alpha8",
+    "@vaadin/time-picker": "24.4.0-alpha8",
+    "@vaadin/tooltip": "24.4.0-alpha8",
+    "@vaadin/upload": "24.4.0-alpha8",
+    "@vaadin/vaadin-development-mode-detector": "2.0.6",
+    "@vaadin/vaadin-lumo-styles": "24.4.0-alpha8",
+    "@vaadin/vaadin-material-styles": "24.4.0-alpha8",
+    "@vaadin/vaadin-themable-mixin": "24.4.0-alpha8",
+    "@vaadin/vaadin-usage-statistics": "2.1.2",
+    "@vaadin/vertical-layout": "24.4.0-alpha8",
+    "@vaadin/virtual-list": "24.4.0-alpha8",
     "classnames": "^2.3.2",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
@@ -90,13 +102,13 @@
     "react-router-dom": "6.21.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7",
     "@lit-labs/react": "^1.1.0",
     "@rollup/plugin-replace": "5.0.5",
     "@rollup/pluginutils": "5.1.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "4.2.1",
-    "@vitejs/plugin-react-swc": "3.5.0",
     "async": "3.2.5",
     "glob": "10.3.10",
     "rollup-plugin-brotli": "3.1.0",
@@ -104,7 +116,7 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.3.3",
-    "vite": "5.0.11",
+    "vite": "5.0.12",
     "vite-plugin-checker": "0.6.2",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
@@ -195,39 +207,54 @@
     "@vaadin/hilla-lit-form": "$@vaadin/hilla-lit-form",
     "@vaadin/hilla-react-auth": "$@vaadin/hilla-react-auth",
     "@vaadin/hilla-generator-cli": "$@vaadin/hilla-generator-cli",
-    "@vaadin/hilla-generator-plugin-backbone": "$@vaadin/hilla-generator-plugin-backbone"
+    "@vaadin/hilla-generator-plugin-backbone": "$@vaadin/hilla-generator-plugin-backbone",
+    "@vaadin/a11y-base": "$@vaadin/a11y-base",
+    "@vaadin/component-base": "$@vaadin/component-base",
+    "@vaadin/field-base": "$@vaadin/field-base",
+    "@vaadin/input-container": "$@vaadin/input-container",
+    "@vaadin/lit-renderer": "$@vaadin/lit-renderer",
+    "@vaadin/overlay": "$@vaadin/overlay",
+    "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
+    "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
+    "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
+    "@vaadin/router": "$@vaadin/router",
+    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
+    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
       "@types/react": "18.2.48",
       "@types/react-dom": "18.2.18",
-      "@vaadin/accordion": "24.4.0-alpha6",
-      "@vaadin/app-layout": "24.4.0-alpha6",
-      "@vaadin/avatar": "24.4.0-alpha6",
-      "@vaadin/avatar-group": "24.4.0-alpha6",
-      "@vaadin/board": "24.4.0-alpha6",
-      "@vaadin/bundles": "24.4.0-alpha6",
-      "@vaadin/button": "24.4.0-alpha6",
-      "@vaadin/charts": "24.4.0-alpha6",
-      "@vaadin/checkbox": "24.4.0-alpha6",
-      "@vaadin/checkbox-group": "24.4.0-alpha6",
-      "@vaadin/combo-box": "24.4.0-alpha6",
+      "@vaadin/a11y-base": "24.4.0-alpha8",
+      "@vaadin/accordion": "24.4.0-alpha8",
+      "@vaadin/app-layout": "24.4.0-alpha8",
+      "@vaadin/avatar": "24.4.0-alpha8",
+      "@vaadin/avatar-group": "24.4.0-alpha8",
+      "@vaadin/board": "24.4.0-alpha8",
+      "@vaadin/bundles": "24.4.0-alpha8",
+      "@vaadin/button": "24.4.0-alpha8",
+      "@vaadin/charts": "24.4.0-alpha8",
+      "@vaadin/checkbox": "24.4.0-alpha8",
+      "@vaadin/checkbox-group": "24.4.0-alpha8",
+      "@vaadin/combo-box": "24.4.0-alpha8",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/confirm-dialog": "24.4.0-alpha6",
-      "@vaadin/context-menu": "24.4.0-alpha6",
-      "@vaadin/cookie-consent": "24.4.0-alpha6",
-      "@vaadin/crud": "24.4.0-alpha6",
-      "@vaadin/custom-field": "24.4.0-alpha6",
-      "@vaadin/date-picker": "24.4.0-alpha6",
-      "@vaadin/date-time-picker": "24.4.0-alpha6",
-      "@vaadin/details": "24.4.0-alpha6",
-      "@vaadin/dialog": "24.4.0-alpha6",
-      "@vaadin/email-field": "24.4.0-alpha6",
-      "@vaadin/field-highlighter": "24.4.0-alpha6",
-      "@vaadin/form-layout": "24.4.0-alpha6",
-      "@vaadin/grid": "24.4.0-alpha6",
-      "@vaadin/grid-pro": "24.4.0-alpha6",
+      "@vaadin/component-base": "24.4.0-alpha8",
+      "@vaadin/confirm-dialog": "24.4.0-alpha8",
+      "@vaadin/context-menu": "24.4.0-alpha8",
+      "@vaadin/cookie-consent": "24.4.0-alpha8",
+      "@vaadin/crud": "24.4.0-alpha8",
+      "@vaadin/custom-field": "24.4.0-alpha8",
+      "@vaadin/date-picker": "24.4.0-alpha8",
+      "@vaadin/date-time-picker": "24.4.0-alpha8",
+      "@vaadin/details": "24.4.0-alpha8",
+      "@vaadin/dialog": "24.4.0-alpha8",
+      "@vaadin/email-field": "24.4.0-alpha8",
+      "@vaadin/field-base": "24.4.0-alpha8",
+      "@vaadin/field-highlighter": "24.4.0-alpha8",
+      "@vaadin/form-layout": "24.4.0-alpha8",
+      "@vaadin/grid": "24.4.0-alpha8",
+      "@vaadin/grid-pro": "24.4.0-alpha8",
       "@vaadin/hilla-core": "24.4.0-alpha2",
       "@vaadin/hilla-generator-cli": "24.4.0-alpha2",
       "@vaadin/hilla-generator-core": "24.4.0-alpha2",
@@ -242,39 +269,48 @@
       "@vaadin/hilla-react-auth": "24.4.0-alpha2",
       "@vaadin/hilla-react-crud": "24.4.0-alpha2",
       "@vaadin/hilla-react-form": "24.4.0-alpha2",
-      "@vaadin/horizontal-layout": "24.4.0-alpha6",
-      "@vaadin/icon": "24.4.0-alpha6",
-      "@vaadin/icons": "24.4.0-alpha6",
-      "@vaadin/integer-field": "24.4.0-alpha6",
-      "@vaadin/item": "24.4.0-alpha6",
-      "@vaadin/list-box": "24.4.0-alpha6",
-      "@vaadin/login": "24.4.0-alpha6",
-      "@vaadin/map": "24.4.0-alpha6",
-      "@vaadin/menu-bar": "24.4.0-alpha6",
-      "@vaadin/message-input": "24.4.0-alpha6",
-      "@vaadin/message-list": "24.4.0-alpha6",
-      "@vaadin/multi-select-combo-box": "24.4.0-alpha6",
-      "@vaadin/notification": "24.4.0-alpha6",
-      "@vaadin/number-field": "24.4.0-alpha6",
-      "@vaadin/password-field": "24.4.0-alpha6",
-      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha6",
-      "@vaadin/progress-bar": "24.4.0-alpha6",
-      "@vaadin/radio-group": "24.4.0-alpha6",
-      "@vaadin/react-components": "24.4.0-alpha6",
-      "@vaadin/rich-text-editor": "24.4.0-alpha6",
-      "@vaadin/scroller": "24.4.0-alpha6",
-      "@vaadin/select": "24.4.0-alpha6",
-      "@vaadin/side-nav": "24.4.0-alpha6",
-      "@vaadin/split-layout": "24.4.0-alpha6",
-      "@vaadin/tabs": "24.4.0-alpha6",
-      "@vaadin/tabsheet": "24.4.0-alpha6",
-      "@vaadin/text-area": "24.4.0-alpha6",
-      "@vaadin/text-field": "24.4.0-alpha6",
-      "@vaadin/time-picker": "24.4.0-alpha6",
-      "@vaadin/tooltip": "24.4.0-alpha6",
-      "@vaadin/upload": "24.4.0-alpha6",
-      "@vaadin/vertical-layout": "24.4.0-alpha6",
-      "@vaadin/virtual-list": "24.4.0-alpha6",
+      "@vaadin/horizontal-layout": "24.4.0-alpha8",
+      "@vaadin/icon": "24.4.0-alpha8",
+      "@vaadin/icons": "24.4.0-alpha8",
+      "@vaadin/input-container": "24.4.0-alpha8",
+      "@vaadin/integer-field": "24.4.0-alpha8",
+      "@vaadin/item": "24.4.0-alpha8",
+      "@vaadin/list-box": "24.4.0-alpha8",
+      "@vaadin/lit-renderer": "24.4.0-alpha8",
+      "@vaadin/login": "24.4.0-alpha8",
+      "@vaadin/map": "24.4.0-alpha8",
+      "@vaadin/menu-bar": "24.4.0-alpha8",
+      "@vaadin/message-input": "24.4.0-alpha8",
+      "@vaadin/message-list": "24.4.0-alpha8",
+      "@vaadin/multi-select-combo-box": "24.4.0-alpha8",
+      "@vaadin/notification": "24.4.0-alpha8",
+      "@vaadin/number-field": "24.4.0-alpha8",
+      "@vaadin/overlay": "24.4.0-alpha8",
+      "@vaadin/password-field": "24.4.0-alpha8",
+      "@vaadin/polymer-legacy-adapter": "24.4.0-alpha8",
+      "@vaadin/progress-bar": "24.4.0-alpha8",
+      "@vaadin/radio-group": "24.4.0-alpha8",
+      "@vaadin/react-components": "24.4.0-alpha5",
+      "@vaadin/rich-text-editor": "24.4.0-alpha8",
+      "@vaadin/router": "1.7.5",
+      "@vaadin/scroller": "24.4.0-alpha8",
+      "@vaadin/select": "24.4.0-alpha8",
+      "@vaadin/side-nav": "24.4.0-alpha8",
+      "@vaadin/split-layout": "24.4.0-alpha8",
+      "@vaadin/tabs": "24.4.0-alpha8",
+      "@vaadin/tabsheet": "24.4.0-alpha8",
+      "@vaadin/text-area": "24.4.0-alpha8",
+      "@vaadin/text-field": "24.4.0-alpha8",
+      "@vaadin/time-picker": "24.4.0-alpha8",
+      "@vaadin/tooltip": "24.4.0-alpha8",
+      "@vaadin/upload": "24.4.0-alpha8",
+      "@vaadin/vaadin-development-mode-detector": "2.0.6",
+      "@vaadin/vaadin-lumo-styles": "24.4.0-alpha8",
+      "@vaadin/vaadin-material-styles": "24.4.0-alpha8",
+      "@vaadin/vaadin-themable-mixin": "24.4.0-alpha8",
+      "@vaadin/vaadin-usage-statistics": "2.1.2",
+      "@vaadin/vertical-layout": "24.4.0-alpha8",
+      "@vaadin/virtual-list": "24.4.0-alpha8",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
       "lit": "3.1.1",
@@ -284,10 +320,10 @@
       "react-router-dom": "6.21.2"
     },
     "devDependencies": {
+      "@babel/preset-react": "^7",
       "@rollup/plugin-replace": "5.0.5",
       "@rollup/pluginutils": "5.1.0",
       "@vitejs/plugin-react": "4.2.1",
-      "@vitejs/plugin-react-swc": "3.5.0",
       "async": "3.2.5",
       "glob": "10.3.10",
       "rollup-plugin-brotli": "3.1.0",
@@ -295,12 +331,12 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.3.3",
-      "vite": "5.0.11",
+      "vite": "5.0.12",
       "vite-plugin-checker": "0.6.2",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "528582264dbdf92b3c0c1bc9359186a61feb9224623e3d3f9568c82c7ca46baa"
+    "hash": "77a2bd39376471c3d44b027360c3f4e521bb4e0a83998e06a9695c0ae7e01f80"
   }
 }
