--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
     <properties>
         <java.version>17</java.version>
         <vaadin.version>24.4-SNAPSHOT</vaadin.version>
-        <hilla.version>24.4-SNAPSHOT</hilla.version>
     </properties>
 
     <parent>
@@ -100,9 +99,9 @@
             </plugin>
 
             <plugin>
-                <groupId>com.vaadin.hilla</groupId>
-                <artifactId>hilla-maven-plugin</artifactId>
-                <version>${hilla.version}</version>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-maven-plugin</artifactId>
+                <version>${vaadin.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -134,9 +133,9 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>com.vaadin.hilla</groupId>
-                        <artifactId>hilla-maven-plugin</artifactId>
-                        <version>${hilla.version}</version>
+                        <groupId>com.vaadin</groupId>
+                        <artifactId>vaadin-maven-plugin</artifactId>
+                        <version>${vaadin.version}</version>
                         <executions>
                             <execution>
                                 <goals>
